去掉首页直播标志 登录界面无法账号选框无法选择修改,下拉按钮加大,注册下移 隐身后用户列表显示错误 修改麦状态ing

--- a/InKeLive-gcz_99/InKeLive/Logon/LogonViewController.xib
+++ b/InKeLive-gcz_99/InKeLive/Logon/LogonViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,7 +16,6 @@
                 <outlet property="btnUserId" destination="Wxb-ul-R7A" id="960-5T-ebd"/>
                 <outlet property="edtUserID" destination="dkG-KO-7tY" id="gEe-YK-ZXg"/>
                 <outlet property="edtUserPwd" destination="b91-UJ-KX0" id="5Dt-GL-KF1"/>
-                <outlet property="tableView" destination="mxh-cO-mhp" id="HmI-QD-aez"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="viewFooter" destination="LIn-4a-PWC" id="o2N-qM-N9s"/>
                 <outlet property="viewLine" destination="qbT-zw-kIH" id="tOM-Mh-V7m"/>
@@ -38,7 +37,7 @@
                             </constraints>
                         </imageView>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入用户名" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dkG-KO-7tY" userLabel="userId Text Field">
-                            <rect key="frame" x="12" y="200" width="278" height="26"/>
+                            <rect key="frame" x="12" y="200" width="267" height="26"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="26" id="xvD-wN-wnF"/>
                             </constraints>
@@ -188,10 +187,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wxb-ul-R7A">
-                            <rect key="frame" x="295" y="207" width="9" height="6"/>
+                            <rect key="frame" x="279" y="197" width="41" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="9" id="B3w-eq-D5i"/>
-                                <constraint firstAttribute="height" constant="6" id="iLZ-B8-XgK"/>
+                                <constraint firstAttribute="width" constant="41" id="B3w-eq-D5i"/>
+                                <constraint firstAttribute="height" constant="30" id="iLZ-B8-XgK"/>
                             </constraints>
                             <state key="normal" image="login_down"/>
                             <connections>
@@ -210,13 +209,6 @@
                                 <action selector="btnPasswordClicked:" destination="-1" eventType="touchUpInside" id="rYk-bM-FMP"/>
                             </connections>
                         </button>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mxh-cO-mhp">
-                            <rect key="frame" x="12" y="227" width="296" height="40"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="rxF-so-rel"/>
-                            </constraints>
-                        </tableView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fla-0m-Zao">
                             <rect key="frame" x="116" y="634" width="92" height="24"/>
                             <constraints>
@@ -250,23 +242,20 @@
                         <constraint firstItem="b91-UJ-KX0" firstAttribute="leading" secondItem="qQo-0s-FoS" secondAttribute="leading" constant="12" id="KhQ-cU-cUw"/>
                         <constraint firstAttribute="trailing" secondItem="qbT-zw-kIH" secondAttribute="trailing" constant="12" id="O3c-sn-gzO"/>
                         <constraint firstItem="qbT-zw-kIH" firstAttribute="leading" secondItem="qQo-0s-FoS" secondAttribute="leading" constant="12" id="PeZ-NQ-mfU"/>
-                        <constraint firstItem="mxh-cO-mhp" firstAttribute="top" secondItem="qbT-zw-kIH" secondAttribute="bottom" constant="1" id="SFF-le-C7M"/>
-                        <constraint firstAttribute="trailing" secondItem="mxh-cO-mhp" secondAttribute="trailing" constant="12" id="TMR-iR-aw2"/>
                         <constraint firstItem="Fla-0m-Zao" firstAttribute="leading" secondItem="qQo-0s-FoS" secondAttribute="leading" constant="116" id="Tmq-4g-PTm"/>
                         <constraint firstItem="b91-UJ-KX0" firstAttribute="top" secondItem="qbT-zw-kIH" secondAttribute="bottom" constant="30" id="Tx1-bZ-NDl"/>
                         <constraint firstAttribute="trailing" secondItem="QrJ-Ln-FrP" secondAttribute="trailing" constant="12" id="U8t-ig-WKA"/>
-                        <constraint firstItem="mxh-cO-mhp" firstAttribute="leading" secondItem="qQo-0s-FoS" secondAttribute="leading" constant="12" id="XT9-mv-thi"/>
                         <constraint firstItem="s7A-Tc-1WV" firstAttribute="top" secondItem="4tz-vj-pRj" secondAttribute="bottom" constant="14" id="bcB-y2-4Xc"/>
                         <constraint firstAttribute="trailing" secondItem="nas-xq-Xh4" secondAttribute="trailing" constant="12" id="boi-oe-TY3"/>
-                        <constraint firstAttribute="trailing" secondItem="dkG-KO-7tY" secondAttribute="trailing" constant="30" id="cdt-gb-3bU"/>
+                        <constraint firstAttribute="trailing" secondItem="dkG-KO-7tY" secondAttribute="trailing" constant="41" id="cdt-gb-3bU"/>
                         <constraint firstAttribute="trailing" secondItem="s7A-Tc-1WV" secondAttribute="trailing" constant="12" id="do5-wk-UMd"/>
                         <constraint firstItem="QrJ-Ln-FrP" firstAttribute="top" secondItem="qbT-zw-kIH" secondAttribute="bottom" constant="33" id="hoN-Vj-LAf"/>
                         <constraint firstItem="nas-xq-Xh4" firstAttribute="leading" secondItem="qQo-0s-FoS" secondAttribute="leading" constant="12" id="iBF-CL-Imd"/>
-                        <constraint firstItem="nas-xq-Xh4" firstAttribute="top" secondItem="s7A-Tc-1WV" secondAttribute="bottom" constant="8" id="iUZ-jl-bps"/>
-                        <constraint firstItem="Wxb-ul-R7A" firstAttribute="top" secondItem="meG-V6-elV" secondAttribute="bottom" constant="55" id="iuj-Uk-cVW"/>
+                        <constraint firstItem="nas-xq-Xh4" firstAttribute="top" secondItem="s7A-Tc-1WV" secondAttribute="bottom" constant="12" id="iUZ-jl-bps"/>
+                        <constraint firstItem="Wxb-ul-R7A" firstAttribute="top" secondItem="meG-V6-elV" secondAttribute="bottom" constant="45" id="iuj-Uk-cVW"/>
                         <constraint firstAttribute="trailing" secondItem="Fla-0m-Zao" secondAttribute="trailing" constant="112" id="kke-94-Ghi"/>
                         <constraint firstItem="qbT-zw-kIH" firstAttribute="top" secondItem="dkG-KO-7tY" secondAttribute="bottom" constant="-1" id="o9G-uh-6rF"/>
-                        <constraint firstAttribute="trailing" secondItem="Wxb-ul-R7A" secondAttribute="trailing" constant="16" id="ubr-gU-cGv"/>
+                        <constraint firstAttribute="trailing" secondItem="Wxb-ul-R7A" secondAttribute="trailing" id="ubr-gU-cGv"/>
                         <constraint firstItem="s7A-Tc-1WV" firstAttribute="leading" secondItem="qQo-0s-FoS" secondAttribute="leading" constant="12" id="x1k-Go-NJM"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -291,9 +280,9 @@
         </view>
     </objects>
     <resources>
-        <image name="1258logo" width="72" height="87"/>
-        <image name="login_down" width="9" height="5"/>
-        <image name="password_hidden" width="14" height="4"/>
+        <image name="1258logo" width="72" height="87.5"/>
+        <image name="login_down" width="9" height="5.5"/>
+        <image name="password_hidden" width="14" height="4.5"/>
         <image name="password_visible" width="14" height="8"/>
         <image name="qq_icon" width="38" height="38"/>
         <image name="wechat_icon" width="38" height="38"/>
